PHOENIX-32 - Filename overflow in attached document issue fixed

--- a/egov/egov-egiweb/src/main/webapp/resources/global/css/egov/custom.css
+++ b/egov/egov-egiweb/src/main/webapp/resources/global/css/egov/custom.css
@@ -2005,3 +2005,7 @@ border-top: 1px solid #ccc;
 table.dataTable.nopointer tbody tr:hover {
 cursor:auto;
 }
+
+.file-ellipsis{
+	white-space: nowrap;width: 250px;overflow: hidden;text-overflow: ellipsis;
+}
